# graduation-project-database

./: .env.example  .gitignore  LICENSE  README.md  graph_timings.csv  main.py  pyproject.toml  sql_ddl_query.sql
ai/: _graph_model.py  graph_model.py  node_cnn.py
ai/readers/: base_reader.py  cnn_reader.py  ocr_reader.py  reader_loader.py
api/: app_routes.py  auth_routes.py  routes.py
app_featuers/: plogic.py  plot_timing.py
auth/: utils.py
db/: config.py  create_database.py  crud.py  models.py
models/: emnist_circle_model.pth  emnist_model.pth  nodecnn_synthetic.pth
schemas/: ai.py  auth.py  label_correction.py  requests.py  saved_visual.py
