[project]
name = "graduation-project-database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlmodel>=0.0.27",
    "fastapi>=0.123.10",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0"
]
